      * This however affected legitimate instances without a way to override the behaviour
      * Users can hide unwanted instances if required
- Amends `GOP Graphics` Handling
  * GOP is now provided/replaced on the `ConsoleOut` handle by default when required
  * Hence, the "Opt-In" `provide_console_gop` token is replaced by the "Opt-Out" `disable_set_consolegop`
- Renames Configuration Token
  * `decline_apple_fb` to `disable_set_applefb`


0.14.0.AB (03 Oct 2023):
-----------------------
- Adds `HelpScan` Feature
  * Ensures that some typically unwanted loaders are not displayed in the first row
    - Enforces tools only appearing in the second row
    - Always adds program default items for exclusion to user defined ones
  * Enabled by default but can be disabled using a new `decline_help_scan` configuration token
    - The new token sets RefindPlus to follow the upstream implementation
- Fixes `MemTest Tool`
  * The MemTest fallback loader file was not recognised as a MemTest loader
  * Hence MemTest could only be run via explicit `MemTest` efi files
  * This bug was introduced in v0.12.0.AN (Commit 44b53e8)
- Improves `Ventoy` Handling
  * Removes multiple redundant/invalid loader options that otherwise appear
  * Displays an `os_ventoy` icon if present
- Improves `ScaleUI` Handling
  * Eliminates extra UI scaling that may happen on main screen rescans
- Improves `SyncAPFS` Handling
  * Handles synced multi instance APFS container volumes in DontScanVolumes list
  * Stores APFS Roles in volume object instead of retrieving such each time
- Improves Misc `External Screen` Tool Handling
  * Some tools that run external screens, such as `GDisk`, may change volume device paths
  * Hence, on return, RefindPlus did not operate as it should
  * Previously fixed but re-emerged and now addressed again
- Improves Linux Param File Handling
  * A memory conflict meant the files were not always read
- Improves Filesystem Driver Handling